<resources>
    <string name="app_name">Impilo</string>
    <string name="title_auth" translatable="false">Authentication</string>
    <string name="login">SIGN IN</string>
    <string name="password">Password</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="or_you_can">or you can</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="field_required">The field is required</string>
    <string name="register_information">NEW ACCOUNT</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="full_name">Full name</string>
    <string name="next">NEXT</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="invalid_email_format">Incorrect e-mail address</string>
    <string name="password_length_error">Password to short</string>
    <string name="invalid_value">Incorrect value</string>
    <string name="register_description">Hello ! Creating an account requires some basic information</string>
    <string name="back">BACK</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="ectomorph">Ectomorph</string>
    <string name="mesomorph">Mesomorph</string>
    <string name="endomorph">Endomorph</string>
    <string name="ecto_mesomorph">Ecto-Mesomorph</string>
    <string name="meso_ectomorph">Meso-Ectomorph</string>
    <string name="endo_mesomorph">Endo-Mesomorph</string>
    <string name="meso_endomorph">Meso-Endomorph</string>
    <string name="basic_information">BASIC INFORMATION</string>
    <string name="lifestyle_descript">Select your lifestyle and goal.</string>
    <string name="lifestyle">LIFESTYLE</string>
    <string name="workout_style">WORKOUT STYLE</string>
    <string name="workout_style_descript">Choose the style, amount and duration of workouts.</string>
    <string name="sedentary">Sedentary</string>
    <string name="light_activity">Light Activity</string>
    <string name="active">Active</string>
    <string name="very_active">Very Active</string>
    <string name="sedentary_descript">A person working in an office on a computer. Little movement during the day.</string>
    <string name="light_activity_descript">A person who spends a significant part of the day on their feet. Moves mainly on foot.</string>
    <string name="active_descript">Physically working person e.g. waitress, courier, housekeeper</string>
    <string name="very_active_descript">A hard-working person e.g. a construction worker, paver</string>
    <string name="light_workout">Light</string>
    <string name="light_workout_descript">Light weights. Easy breathing.</string>
    <string name="moderate_workout">Moderate</string>
    <string name="moderate_workout_descript">Intense trainings. Elevated hearth rate.</string>
    <string name="heavy_workout">Heavy</string>
    <string name="heavy_workout_descript">Heavy weights. Heavy breathing.</string>
    <string name="loss">Loss</string>
    <string name="loss_title">Fat loss</string>
    <string name="maintain">Maintain</string>
    <string name="maintain_title">Maintain</string>
    <string name="bulking">Bulking</string>
    <string name="bulking_title">Bulking</string>
    <string name="register">REGISTER</string>
    <string name="basic_info_description">This information will allow us to calculate your daily calories and macronutrients needs. More measurements of individual body parts can be added in the profile settings.</string>
    <string name="somatotype_subtitle1">Somatotype is a human body shape and physique type. Choose your somatotype. Types can be combined</string>
    <string name="somatotype">SOMATOTYPE</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_cm">Weight (kg)</string>
    <string name="waist_cm">Waist (cm)</string>
    <string name="style">Style</string>
    <string name="workouts_per_week">Number of workouts per week :</string>
    <string name="workout_time">Workout time (min)</string>
    <string name="minutes">Minutes</string>
    <string name="goal">Goal</string>
    <string name="optional">Optional</string>
    <string-array name="firstConfigTitles">
        <item>@string/register_information</item>
        <item>@string/basic_information</item>
        <item>@string/somatotype</item>
        <item>@string/workout_style</item>
        <item>@string/lifestyle</item>
    </string-array>
    <string-array name="firstConfigDescriptions">
        <item>@string/register_description</item>
        <item>@string/basic_info_description</item>
        <item>@string/somatotype_subtitle1</item>
        <item>@string/workout_style_descript</item>
        <item>@string/lifestyle_descript</item>
    </string-array>
    <string-array name="lifestyleTitles">
        <item>@string/sedentary</item>
        <item>@string/light_activity</item>
        <item>@string/active</item>
        <item>@string/very_active</item>
    </string-array>
    <string-array name="lifestyleDescriptions">
        <item>@string/sedentary_descript</item>
        <item>@string/light_activity_descript</item>
        <item>@string/active_descript</item>
        <item>@string/very_active_descript</item>
    </string-array>
    <string-array name="workoutTitles">
        <item>@string/light_workout</item>
        <item>@string/moderate_workout</item>
        <item>@string/heavy_workout</item>
    </string-array>
    <string-array name="workoutDescriptions">
        <item>@string/light_workout_descript</item>
        <item>@string/moderate_workout_descript</item>
        <item>@string/heavy_workout_descript</item>
    </string-array>
    <string-array name="goalTitles">
        <item>@string/loss_title</item>
        <item>@string/maintain_title</item>
        <item>@string/bulking_title</item>
    </string-array>
    <string name="back_online">Back online</string>
    <string name="no_connection">No connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="check_your_connection_and_try_agan">Check your connection and try again</string>
    <string name="failed_signing_in">Invalid e-mail or password</string>
    <string name="success_login">Logged In Successful</string>
    <string name="finish">FINISH</string>
    <string name="home">Home</string>
    <string name="diet">Diet</string>
    <string name="trainings">Trainings</string>
    <string name="profile">Profile</string>
    <string name="title_diet">Diet</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="summary">Summary</string>
    <string name="energy">Energy</string>
    <string name="sugars">Sugars</string>
    <string name="energyLetter">E</string>
    <string name="carbohydratesLetter">C</string>
    <string name="proteinsLetter">P</string>
    <string name="fatsLetter">F</string>
    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="supper">Supper</string>
    <string name="dinner">Dinner</string>
    <string name="today">Today</string>
    <string name="quick_product_add">Quick product add</string>
    <string name="energyKJ">Energy (kJ)</string>
    <string name="energyKcal">Energy (kcal)</string>
    <string name="kcal" translatable="false">kcal</string>
    <string name="gram_unit" translatable="false">g</string>
    <string name="_100_gram" translatable="false">100g</string>
    <string name="saturated_fatty_acids">Saturated Fat</string>
    <string name="unsaturated_fatty_acids">Trans Fat</string>
    <string name="fiber">Fiber</string>
    <string name="salt">Salt</string>
    <string name="serving_size">Serving size</string>
    <string name="nutrient">Nutrient</string>
    <string name="portion">Portion</string>
    <string name="camera_perm_granted">Camera permission granted</string>
    <string name="camera_perm_denied">Camera permission denied</string>
    <string name="product_not_found">Product not found</string>
    <string name="product_delete_success">Product deleted successful</string>
    <string name="scanning">Scanning…</string>
    <string name="product_delete_error">Error while product deleting</string>
    <string name="want_delete_product">Do you want to delete this product ?</string>
    <string name="delete_product">Delete product</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="product_update_success">Product update successful</string>
    <string name="product_update_error">Product update error</string>
    <string name="search_product">Search product</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="title_workout">Workout</string>
    <string name="low_body_fat">Low</string>
    <string name="normal_body_fat">Normal</string>
    <string name="increased_body_fat">Increased</string>
    <string name="high_body_fat">Overweight</string>
    <string name="have_own_plan">I have my own workout plan</string>
    <string name="generate_plan">Generate a workout plan</string>
    <string name="body_rating">Body rating</string>
    <string name="body_fat_level">Body fat level</string>
    <string name="fat_loss_proposition">Your body fat level is little too high. We recommend changing the goal to reduction.</string>
    <string name="fat_loss_need">Your body fat level is too high. You should reduce body fat, before bulking muscle mass up</string>
    <string name="bulking_up_proposition">You have low body fat. You can start bulking muscle mass up.</string>
    <string name="bulking_ok">You have normal body fat. You can now start building muscle mass up !</string>
    <string name="maintain_proposition">You have normal body fat. You can change your goal to maintain weight.</string>
    <string name="fat_lose_ok">Your body fat is elevated or too high. This is a good moment to start losing weight !</string>
    <string name="maintain_ok">You have a good level of body fat. Stick to diets and workouts to maintain your body fat levels.</string>
    <string name="change_goal">Change goal</string>
    <string name="configure_the_training_section">Configure the training section</string>
    <string name="change_goal_message">"Change the goal to : "</string>
    <string name="change_goal_succes">Goal changed successful</string>
    <string name="change_goal_error">Failed to change goal</string>
    <string name="weekly">Weekly</string>
    <string name="biweekly">Biweekly</string>
    <string name="choose_your_training_system">Choose your training system</string>
    <string name="create_a_plan">Create a plan</string>
    <string name="weekA">Week A</string>
    <string name="weekB">Week B</string>
    <string name="set">Set</string>
    <string name="reps">Reps</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="exercises">exercises</string>
    <string name="one_exercise">exercise</string>
    <string name="two_four_exercises_for_pl">exercises</string>
    <string name="rest_day">Rest day</string>
    <string name="chest">Chest</string>
    <string name="pec_major">Pec Major</string>
    <string name="pec_minor">Pec Minor</string>
    <string name="serratus_anterior">Serratus Anterior</string>
    <string name="forearms">Forearms</string>
    <string name="back_muscles">Back</string>
    <string name="body_measurements">Body measurements</string>
    <string name="current_measurements">Current measurements</string>
    <string name="update">Update</string>
</resources>